examples/compiler_errors/adversarial/type_and_effect_modules/Main.flx
import TypeBroken
import EffectBroken

fn main() -> Unit {
    let entry = 1
}
